catalog list align fix

--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -11,6 +11,7 @@
   &__list {
     .list();
     padding-top: 20px;
+    align-items: center;
   }
 
   &__item {
